--- a/styles/volunteer.scss
+++ b/styles/volunteer.scss
@@ -3,7 +3,8 @@
 
 // Volunteer
 .volunteer-top-paragraph {
-  line-height: 2;
+  font-size: 1rem;
+  line-height: 1.5;
 }
 
 .community-service-button {
