--- a/styles/login.scss
+++ b/styles/login.scss
@@ -34,17 +34,9 @@
 
 .sign-in-button {
   border-radius: .5rem;
-  font-family: RopaSans, sans-serif;
+  font-family: Poppins, sans-serif;
   margin-left: auto;
   margin-right: auto;
   margin-top: 1.9rem;
   width: 6.25rem;
-}
-
-@media (max-width: 76.5rem) {
-  // Mobile Support
-}
-
-@media (max-width: 102.25rem) and (orientation: landscape) {
-  // Mobile Support
 }
