--- a/styles/signup.scss
+++ b/styles/signup.scss
@@ -43,7 +43,7 @@
 
 .signup-button {
   border-radius: .5rem;
-  font-family: RopaSans, sans-serif;
+  font-family: Poppins, sans-serif;
   margin: 1.9rem auto 0;
   width: 6.25rem;
 
