--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,8 +21,8 @@
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css');
 //Rubik Medium
 @import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
-//Ropa Sans (replaces DIN)
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@500&display=swap');
+//Poppins (replaces DIN)
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap');
 
 
 // styles.css
@@ -33,7 +33,7 @@
 
 body {
   background-color: $white;
-  font-family: RopaSans, sans-serif;
+  font-family: Poppins, sans-serif;
 }
 
 main {
@@ -98,7 +98,7 @@ form {
 input,
 select,
 textarea {
-  font-family: RopaSans, sans-serif;
+  font-family: Poppins, sans-serif;
   font-size: 16px;
   height: 2rem;
   margin-bottom: 1rem;
